# cramdown-tauri

./: .justfile  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: tauri.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: card.rs  collection.rs  context.rs  deck.rs  main.rs  note.rs  review.rs
src-tauri/tests/fixtures/basicdeck/: 123_basic.md
src/lib/: CreateDeck.svelte  Greet.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/cards/create/: +page.svelte  +page.ts
src/routes/decks/[deckId]/notes/[noteId]/: +page.svelte  +page.ts
src/routes/decks/[deckId]/review/: +page.svelte  +page.ts
src/routes/decks/[deck]/: +page.svelte  +page.ts
src/routes/decks/create/: +page.svelte
test-resources/test-collection/programming/: 1293010392_basic.md
